# PSerialization

./: .gitignore  README.md  scratch_note.txt  setup.cfg
.github/workflows/: publish.yml  push_workflow.yml
PSerialize/: serialize.py
PSerialize/src/: deserialize.py  serialization_utils.py  serialize.py
PSerialize/test/models/: enum.py  shoe_store.py
PSerialize/test/tests/: dataclass_test.py  enum_test.py  gil_deserialization_test.py  middleware_test.py  shoe_store_test.py
src/pserialize/: __init__.py  deserialize.py  deserialize_impl.py  serialization_utils.py  serialize.py
src/pserialize/middleware/: datetime.py
tests/: __init__.py  collection_test.py  dataclass_test.py  dto_test.py  enum_test.py  failed_deserialize_test.py  middleware_test.py  recursive_reference_test.py  shoe_store_test.py  success_cases_test.py  typing_support_test.py  union_test.py
tests/middleware/: middleware_test.py
tests/models/: dataclass.py  shoe_store.py
