[metadata]
name = pserialization
version = 0.0.5
author = Steffen
author_email = steffen.cucos@gmail.com
description = A de/serialization library for python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SteffenCucos/PSerialization
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src